"Implemented further filters and made changes to testing"